--- a/Assignment2/Question11.html
+++ b/Assignment2/Question11.html
@@ -7,12 +7,12 @@
 <body>
 
   <select id="image-select">
-    <option value="image1.jpg">Image 1</option>
-    <option value="image2.jpg">Image 2</option>
+    <option value="image.jpg">Image 1</option>
+    <option value="image2.jpeg">Image 2</option>
     <option value="image3.jpg">Image 3</option>
   </select>
 
-  <img id="image" src="image.jpg" alt="Image 1">
+  <img id="image" src="image3.jpg" alt="Image ">
 
   <script>
     $(document).ready(function() {
