--- a/Assignment2/Question12.html
+++ b/Assignment2/Question12.html
@@ -28,7 +28,7 @@
           // create a table element
           var table = $('<table>');
 
-          // add some rows and cells to the table
+          // add some rows and columns to the table
           for (var i = 0; i < 5; i++) {
             var row = $('<tr>');
             for (var j = 0; j < 3; j++) {
