--- a/Assignment2/Question4.html
+++ b/Assignment2/Question4.html
@@ -12,9 +12,8 @@
 <body>
 
     <div class="div1">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eveniet, deserunt error officiis fuga
-            dolorum ab iste molestias fugiat non! Neque nostrum totam laudantium possimus distinctio velit dolorum fugit
-            impedit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam laborum nemo, nisi provident, ut iusto sit est rerum cupiditate nobis numquam placeat ex debitis ipsam, nesciunt sed. Laboriosam quisquam quibusdam ea, tempora aliquam mollitia amet labore non impedit harum veniam ratione expedita error facere nam deserunt quaerat fugit cum consequatur?
+        </p>
     </div>
     <br>
 
@@ -23,7 +22,7 @@
             $(".div1").hover(function () {
                 $(this).css({ "background-color": "pink", "color": "white" });
             }, function () {
-                $(this).css({ "background-color": "white", "color": "black" });
+                $(this).css({ "background-color": "yellow", "color": "black" });
             });
         });
     </script>
