--- a/Assignment2/Question6.html
+++ b/Assignment2/Question6.html
@@ -10,6 +10,22 @@
 			});
 		});
 	</script>
+	<style>
+		p {
+		  font-size: 18px;
+		  color: #333;
+		  margin-bottom: 20px;
+		}
+	  
+		button {
+		  padding: 10px 20px;
+		  background-color: #a291ad;
+		  color: #fff;
+		  border: none;
+		  border-radius: 10px;
+		  cursor: pointer;
+		}
+	  </style>
 </head>
 <body>
 	<p>Initial text.</p>
