--- a/Assignment2/Question7.html
+++ b/Assignment2/Question7.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Image Animation Example</title>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<style>
-		#myImage {
-			position: relative;
-			animation-name: example;
-			animation-duration: 2s;
-			animation-iteration-count: infinite;
-		}
-
-		@keyframes example {
-			0%   { left: 0px; }
-			50%  { left: 200px; }
-			100% { left: 0px; }
-		}
-	</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script> 
+$(document).ready(function(){
+  $("button").click(function(){
+    $("div").animate({left: '850px'});
+  });
+});
+</script> 
 </head>
 <body>
-	<img id="myImage" src="image2.jpeg" width="50%"height="50%" alt="Placeholder Image">
+
+<button>Start Animation</button>
+
+<p>Hello Sigma Infosolutions!!!</p>
+
+<div style="background:#98bf21;height:100px;width:100px;position:absolute;"></div>
+
 </body>
-<script>
-	$(document).ready(function() {
-		$('#myImage').hover(function() {
-			$(this).css('animation-play-state', 'paused');
-		}, function() {
-			$(this).css('animation-play-state', 'running');
-		});
-	});
-</script>
 </html>
