--- a/Assignment1/Question1.html
+++ b/Assignment1/Question1.html
@@ -7,8 +7,9 @@
 	<script>
         //ans1
 		$(document).ready(function() {
+			$("button").click(function(){
 		$('p:first').remove();
-        
+			})
 		});
 	</script>
 </head>
@@ -22,6 +23,8 @@
 	<p>This is the second paragraph.</p>
 	<p>This is the third paragraph.</p>
 	<p>This is the fourth paragraph.</p>
+
+	<button>Hide</button>
 </div>
 </body>
 </html>
